--- a/css/main.css
+++ b/css/main.css
@@ -40,55 +40,94 @@ ul {
 
 a {
 	color: black;
+  text-decoration: none;
 }
 
 a:hover {
-	color: black;
+
+	color: blue;
 	text-decoration: none;
+-webkit-transition: .25s ease-in
 }
 
 #any {
-	color: #ccc;
+	color: 		MediumSeaGreen;
 }
 
 #any:hover {
 	color: red;
 }
 
-#pizza {
+#rocket {
 	width: 50px;
 	display: inline-block;
 	vertical-align: middle;
+  animation:animated_div 5s 1;
+  -moz-animation:animated_div 5s 1;
+  -webkit-animation:animated_div 5s 1;
+  -o-animation:animated_div 5s 1;
+  border-radius:5px;
+    -webkit-border-radius:5px;
 
 	-webkit-transition: all .5s ease-in-out; /* transitions make any changes to the element happen over time */
 }
 
-#pizza:hover {
-	-webkit-transform: rotate(720deg);
+#rocket:hover {
+  position: relative;
+	animation: rocket 5s;
 }
+
+@keyframes rocket {
+  0% {transform: rotate(0deg);left:0px;}
+  25% {transform: rotate(20deg);left:0px;}
+  50% {transform: rotate(0deg);left:600px;}
+  55% {transform: rotate(0deg);left:600px;}
+  70% {transform: rotate(0deg);left:600px;}
+  100% {transform: rotate(-360deg);left:0px;}
+}
+
+
+@-webkit-keyframes rocket {
+  0% {transform: rotate(0deg);left:0px;}
+  25% {transform: rotate(20deg);left:0px;}
+  50% {transform: rotate(0deg);left:600px;}
+  55% {transform: rotate(0deg);left:600px;}
+  70% {transform: rotate(0deg);left:600px;}
+  100% {transform: rotate(-360deg);left:0px;}
+}
+
+
+@-o-keyframes rocket {
+  0% {transform: rotate(0deg);left:0px;}
+  25% {transform: rotate(20deg);left:0px;}
+  50% {transform: rotate(0deg);left:600px;}
+  55% {transform: rotate(0deg);left:600px;}
+  70% {transform: rotate(0deg);left:600px;}
+  100% {transform: rotate(-360deg);left:0px;}
+}
+
 
 
 .mouse {
-	color: #ccc;
+	color: green;
 }
 
 .mouse:hover {
-	color: black;
-	cursor: url('../img/arrow.png'), auto;
-
+	color: red;
+	cursor: url('../img/kitty.png'), auto;
 }
 
 /* the ~ selector finds all the elements that are adjacent and follow that item. in this case the span class .c on hover */
 
 /* "c" class elements that are siblings of and subsequent to the "c" you are hovering on */
 
-.c {
+.o {
 	opacity: 0;
 }
 
-.c:hover ~ .c, .c:hover {
+.o:hover ~ .o, .o:hover {
 	opacity: 1;
-} 
+}
 
 
 /* hover states for images */
@@ -108,27 +147,28 @@ p#image-paragraph:hover img {
 /* each image is given its own transition delay, so they occur in an order when hovered on */
 
 p#image-paragraph #image-1 {
-	top: 10px;
-	left: 30px;
-	-webkit-transition-delay: 0s;	
+	top: 10%;
+	left: 10%;
+	-webkit-transition-delay: 0s;
 }
 
 p#image-paragraph #image-2 {
-	right: 10px;
-	bottom: 70px;
+  top: 30%;
+	right: 30%;
+  z-index: 4;
 	-webkit-transition-delay: 0.2s;
 }
 
 p#image-paragraph #image-3 {
-	left: 300px;
-	bottom: -60px;
+	left: 80%;
+	bottom: 20%;
 	-webkit-transition-delay: .4s;
 }
 
 p#image-paragraph #image-4 {
-	right: 90px;
-	top: -100px;
-	-webkit-transition-delay: .6s;	
+	right: 30%;
+	bottom: 0%;
+	-webkit-transition-delay: .6s;
 }
 
 
@@ -150,6 +190,7 @@ p#image-paragraph #image-4 {
 /* using transtions, you can move elements along the x or y axis */
 
 .slide-in {
+  display: none
 	opacity: 0;
 	-webkit-transform: translate(400px, 0);
 }
@@ -171,7 +212,7 @@ p#image-paragraph #image-4 {
 
 #shape-paragraph {
 	position: relative;
-	
+
 }
 
 #square {
@@ -191,10 +232,10 @@ p#image-paragraph #image-4 {
 }
 
 #shape-paragraph:hover #square {
-	background-color: orange; 
-	border-radius: 100px;	
+	background-color: orange;
+	border-radius: 100px;
 
-	-webkit-transform: scale(2.25); 
+	-webkit-transform: scale(2.25);
 }
 
 /* hovering on the #shape itself, adjusts the square's color and shape */
@@ -211,10 +252,10 @@ p#image-paragraph #image-4 {
 }
 
 #square2:hover{
-	background-color: blue; 
-	border-radius: 100px;	
+	background-color: blue;
+	border-radius: 100px;
 
-	-webkit-transform: scale(2.25); 
+	-webkit-transform: scale(2.25);
 }
 
 
@@ -224,12 +265,12 @@ p#image-paragraph #image-4 {
 	position: relative;
 	color: #ccc;
 
-	-webkit-transition: all 500ms ease-in-out;	
+	-webkit-transition: all 500ms ease-in-out;
 }
 
 /* this text will appear as a tooltip when hovering on .tooltip */
 
-.tooltip .tooltip-text { 
+.tooltip .tooltip-text {
 	background: black;
 	position: absolute;
 	top: -30px;
@@ -257,11 +298,11 @@ p#image-paragraph #image-4 {
 /* dimensional hovers */
 
 #three-dimensional {
-    z-index: 1;	
+    z-index: 1;
 }
 
 #screenshot {
-    width: 400px; 
+    width: 400px;
     position: absolute;
 	top: -50px;
 	left: calc(50% - 285px);
